# simple-file-settings

./: .pre-commit-config.yaml  README.md  TODO.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test.yml
simplefilesettings/: _base.py  json.py  serializer.py  toml.py  yaml.py
tests/: conftest.py  test__base.py  test_serializer.py
