[tool.poetry]
    name        = "simple-file-settings"
    version     = "0.1.0"
    description = "Access and updates settings from a file as a class."
    license     = "MIT"
    readme      = "README.md"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]
    homepage    = "https://github.com/NathanVaughn/simple-file-settings"
    repository  = "https://github.com/NathanVaughn/simple-file-settings.git"
    package-mode = true

[tool.poetry.dependencies]
    python = "^3.12"

[tool.poetry.group.dev.dependencies]
    pytest     = "^7.4.3"
    pytest-cov = "^4.1.0"

[tool.coverage.run]
    omit = ["tests/*"]

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true

[build-system]
    requires      = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"
